<resources>
    <string name="app_name">Exa02-PDM-AbantoJesus
        <item name="visible" type="id" />
        <item name="masked" type="id" />
    </string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_useremail">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">LOGIN</string>
    <string name="dont_have_account">¿No tienes cuenta?, </string>
    <string name="create_here"> crea una aquí.</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">ÚNETE</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="toolbar_tittle_Main">Menu</string>


    <string name="minimum_password">Password muy corta, ingresa minimo 6 caracteres!</string>
    <string name="auth_failed">Autentificacion fallida, Revisar su email y clave o registrate</string>
    <string name="GoogleLog">Login with Google</string>
    <string name="FaceLog">Login with Facebook</string>
    <string name="forgotPass">¿Olvidaste tu contraseña?</string>


</resources>



